Archive/5f7368ff2335627e9e12c3cc8da3caa5-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function ‘int main()’:
main.cpp:20:18: error: call of overloaded ‘print(const char [6])’ is ambiguous
     print("hello");
                  ^
main.cpp:20:18: note: candidates are:
main.cpp:10:6: note: void print(my_bool)
 void print(my_bool x) {
      ^
main.cpp:14:6: note: void print(std::string)
 void print(std::string x) {
      ^
